--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,29 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.login-card{
+  background-color: #61dafbaa;
+  padding: 24px;
+   width: 600px;
+  height: 600px;
+
+  border-radius: 12px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around ;
+}
+
+.login-btns{
+  margin-top: 12px;
+  display: flex;
+
+  justify-content: space-around;
+  width: calc(40%);
+
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
