--- a/src/App.css
+++ b/src/App.css
@@ -1,65 +1,72 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+p{
+  align-self: last baseline;
+  padding: 0;
+  margin: 0;
+  width: 100%;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
 .login-card{
-  background-color: #61dafbaa;
+  background-color: white;
   padding: 24px;
-   width: 600px;
+  width: 600px;
   height: 600px;
-
   border-radius: 12px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around ;
+  justify-content: space-around;
+  border-style: dotted;
+}
+
+.login-card div{
+  width: 400px;
+}
+
+.login-inp{
+  display: flex;
+  flex-direction: column;
+}
+
+.login-inp input{
+
+  padding-bottom: 16px;
+  padding-top: 16px;
+  padding-left: 16px;
+
+  font-size: 16px;
+
+  background-color: #f3f7f9;
+
+  margin-bottom: 16px;
+  border: solid 1px;
+  border-radius: 4px;
+
+  width: calc(100%);
+}
+
+.login-inp p{
+  text-align: left;
+  margin-bottom: 4px;
 }
 
 .login-btns{
   margin-top: 12px;
   display: flex;
-
-  justify-content: space-around;
-  width: calc(40%);
-
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.login-btns button{
+  width: calc(100%);
+  padding-top: 16px;
+  padding-bottom: 16px;
+  font-size: 16px;
+  font-weight: 600;
+  background-color: #278192;
+  border: none;
+  border-radius: 4px;
 }
