--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@ p{
   font-size: 16px;
   font-weight: 600;
   background-color: #278192;
+  color: white;
   border: none;
   border-radius: 4px;
 }
