--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ p{
   flex-direction: column;
 
   margin: 64px 0px;
+  gap: 5px;
 }
 
 .login-inp input{
@@ -92,7 +93,7 @@ p{
   background-color: #278192;
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 10px;
 }
 
 
