--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
+@import "tailwindcss";
+
+@layer base{
+  @font-face {
+    font-family: 'Titan';
+    src: url("/src/assets/fonts/TitanOne-Regular.ttf")
+  }
+
+  @font-face {
+    font-family: 'Sofia';
+    src: url("/src/assets/fonts/SofiaSansExtraCondensed-VariableFont_wght.ttf");
+  }
+
+  *{
+    box-sizing: border-box;
+    margin: 0;
+    font-family: 'Sofia';
+  }
+}
+
+@theme {
+  --font-titan: 'Titan', sans-serif;
+  --font-sofia: 'Sofia', sans-serif;
+
+  --color-color-a: #000000;
+  --color-color-b: #1C5EDD;
+  --color-color-c: #575757;
+  --color-color-d: #CBCBCB;
+  --color-color-e: #272626;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   min-width: 100%;
