--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
   --color-color-e: #272626;
 }
 
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   min-width: 100%;
 
@@ -40,4 +40,4 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
