--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* #root {
+#root {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -248,4 +248,4 @@ p{
   .input-field input {
     padding: 14px 18px;
   }
-} */
+}
