CreateProject.JSX added without the design

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   margin: 0 auto;
   padding: 4rem;
   text-align: center;
@@ -246,4 +246,4 @@ p{
   .input-field input {
     padding: 14px 18px;
   }
-}
+} */
