--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   margin: 0 auto;
   padding: 4rem;
   text-align: center;
@@ -222,16 +222,6 @@ p{
 
 
 
-
-
-
-
-
-
-
-
-
-/* Browse page styles */
 .container {
   max-width: 1200px;
 }
@@ -305,4 +295,4 @@ p{
   .input-field input {
     padding: 14px 18px;
   }
-}
+} */
