--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,11 @@
   align-items: center;
   justify-content: center;
 } */
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
